# ds-bridge-ui

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/ai-service/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
apps/ai-service/app/: main.py
apps/ai-service/app/api/: chat.py  components.py  description.py  external.py  rooms.py  storybook.py  users.py
apps/ai-service/app/core/: auth.py  config.py  hashing.py  logging.py
apps/ai-service/app/schemas/: chat.py  description.py  external.py  validation.py
apps/ai-service/app/services/: ai_provider.py  broadcast.py  code_patch.py  code_validator.py  figma_api.py  figma_simplify.py  figma_tools.py  firebase_storage.py  firestore.py  message_condenser.py  repair_loop.py  supabase_db.py  supabase_storage.py  tool_calling_loop.py
apps/ai-service/migrations/: 002_create_deleted_room_archive.sql  003_create_deleted_message_archive.sql  004_add_content_hashes.sql  005_user_display_names.sql
apps/ai-service/scripts/: copy_bucket.py  deploy-dev.sh  deploy.sh  migrate_firestore.py  migrate_storage.py
apps/ai-service/tests/: test_auth.py  test_chunk_coalesce.py  test_code_patch.py  test_code_validator.py  test_connection_guard.py  test_derail_guard.py  test_diff_generation.py  test_diff_parser.py  test_diff_prompt.py  test_figma_simplify.py  test_hash.py  test_nocode_retry.py  test_prefetch_cache.py  test_repair_loop.py  test_room_archive.py  test_room_copy_move.py  test_room_copy_title.py  test_room_delete_authz.py  test_room_restore.py  test_user_display_names.py
(+335 files in other folders)
